@@ -1,5 +1,0 @@
-macos_instance:
-  image: ghcr.io/cirruslabs/macos-monterey-base:latest
-
-task:
-  script: sh mac
