@@ -1,5 +1,3 @@
-[![Build Status](https://api.cirrus-ci.com/github/thoughtbot/laptop.svg)](https://cirrus-ci.com/github/thoughtbot/laptop)
-
 Laptop
 ======
 
@@ -14,7 +12,8 @@ Requirements
 
 We support:
 
-* macOS Monterey (12.3) on Apple Silicon and Intel
+* macOS Ventura (13.x) on Apple Silicon and Intel
+* macOS Monterey (12.x) on Apple Silicon and Intel
 
 Older versions may work but aren't regularly tested.
 Bug reports for older versions are welcome.
